Closed Bug 963455 Opened 11 years ago Closed 11 years ago

LayerScope doesn't capture keyboard texture correctly.

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: u480271, Assigned: u480271)

Details

Attachments

(2 files)

Reported in Bug 960683, capturing the B2G keyboard texture with LayerScope is incorrect. Stretched and zoomed.
Assignee: nobody → dglastonbury
Status: NEW → ASSIGNED
When using automatic scope helper for viewport setting, make sure to create an object on the stack.
Attachment #8368247 - Flags: review?(bgirard)
Attachment #8368247 - Flags: review?(bgirard) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: