Bug 963455 - Fix the setting of viewport in GLReadTexImageHelper::ReadTexImage. r=BenWa