gfx/gl/GLReadTexImageHelper.cpp
@@ -533,8 +533,7 @@ GLReadTexImageHelper::ReadTexImage(GLuint aTextureId,
 
         ScopedGLState scopedScissorTestState(mGL, LOCAL_GL_SCISSOR_TEST, false);
         ScopedGLState scopedBlendState(mGL, LOCAL_GL_BLEND, false);
-
-        ScopedViewportRect(mGL, 0, 0, aSize.width, aSize.height);
+        ScopedViewportRect scopedViewportRect(mGL, 0, 0, aSize.width, aSize.height);
 
         /* Setup renderbuffer */
         mGL->fGenRenderbuffers(1, &rb);
